--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,6 +33,7 @@
         android:layout_gravity="center"
         android:layout_margin="@dimen/padding_8dp"/>
     <TextView
+        android:id="@+id/text_view_show"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/edit_text_min_value"
